test/com/facebook/buck/parser/testdata/python_user_defined_rules/errors/invalid_attr_default/BUCK.fixture
load("//errors/invalid_attr_default:invalid_attr.bzl", "invalid_attr")

invalid_attr(name = "invalid_value")
